// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginButton should should render properly 1`] = `
<a
  href="mockLoginUrl=mockMrmUrl"
>
  <input
    alt="Login With Your Email"
    className="btn-signin"
    src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FButton.png?alt=media&token=fb7692b6-1465-47c5-94f6-c94aff31c275"
    type="image"
  />
</a>
`;

exports[`LoginButton should should render undefined when no environment variables are found 1`] = `
<a
  href="undefined=undefined"
>
  <input
    alt="Login With Your Email"
    className="btn-signin"
    src="https://firebasestorage.googleapis.com/v0/b/learning-map-app.appspot.com/o/MrmFrontImages%2FButton.png?alt=media&token=fb7692b6-1465-47c5-94f6-c94aff31c275"
    type="image"
  />
</a>
`;
